New Examples added